8339460: CDS error when module is located in a directory with space in the name